--- a/app/src/main/res/layout/genre_fragment.xml
+++ b/app/src/main/res/layout/genre_fragment.xml
@@ -7,23 +7,14 @@
     android:layout_height="match_parent"
     android:background="@drawable/forest">
 
-
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/songsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/transparent"
-        android:padding="4dp"
+        android:id="@+id/genreRecyclerView"
         android:scrollbars="vertical"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
