--- a/app/src/main/res/layout/genre_gridview.xml
+++ b/app/src/main/res/layout/genre_gridview.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="5dp"
     app:cardPreventCornerOverlap="true"
