--- a/app/src/main/res/drawable-anydpi/next_on_icon.xml
+++ b/app/src/main/res/drawable-anydpi/next_on_icon.xml
@@ -1,9 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="28"
-    android:viewportHeight="28">
+    android:width="40dp"
+    android:height="40dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24"
+    >
+
     <path
         android:fillColor="@color/colorGrey"
-        android:pathData="M6,18l8.5,-6L6,6v12zM16,6v12h2V6h-2z"/>
+        android:pathData="M6,18l8.5,-6L6,6v12zM16,6v12h2V6h-2z"
+        />
+
 </vector>
