added: group_fragment group_cardView

--- a/app/src/main/res/layout/artist_gridview.xml
+++ b/app/src/main/res/layout/artist_gridview.xml
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="genreName"
+                android:text="artistName"
                 android:textColor="@color/colorBlack"
                 android:textSize="15sp"
                 android:textStyle="bold" />
