--- a/app/src/main/res/layout/player.xml
+++ b/app/src/main/res/layout/player.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.500"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/artistName"
+        app:layout_constraintTop_toBottomOf="@+id/playerArtistName"
         app:srcCompat="@drawable/reputation" />
 
     <SeekBar
@@ -210,7 +210,7 @@
         app:layout_constraintTop_toBottomOf="@+id/seekBar" />
 
     <TextView
-        android:id="@+id/artistName"
+        android:id="@+id/playerArtistName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="artistName"
