--- a/app/src/main/res/layout/albums_gridview.xml
+++ b/app/src/main/res/layout/albums_gridview.xml
@@ -1,59 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="5dp"
+    app:cardCornerRadius="7dp"
     app:cardPreventCornerOverlap="true"
     app:cardBackgroundColor="@color/card_selector"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:layout_height="match_parent"
+        >
 
-        <ImageView
-            android:id="@+id/albumImage"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/reputation" />
 
         <TableLayout
             android:id="@+id/albumTableLayout"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/albumImage"
-            android:layout_alignStart="@+id/albumImage"
-            android:layout_alignEnd="@+id/albumImage"
-            android:layout_marginStart="0dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="0dp"
-            android:background="@color/colorWhite">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/albumImage"
+                android:src="@drawable/reputation"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:scaleType="fitXY"
+                />
 
             <LinearLayout
-                android:layout_width="150dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/albumLinearLayout">
 
                 <TextView android:id="@+id/albumName"
-                    android:layout_width="125dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="albumName"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/colorWhite"
                     android:textSize="15dp"
                     android:textStyle="bold"
                     android:maxLines="1"
-                    android:ellipsize="end"/>
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:paddingLeft="7dp"/>
 
                 <ImageButton
                     android:id="@+id/albumMenu"
-                    android:layout_width="25dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@android:color/transparent"
                     android:src="@drawable/vertical_3dots_icon" />
@@ -61,28 +56,19 @@
 
             <TextView
                 android:id="@+id/albumArtistName"
-                android:layout_width="150dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="albumArtistName"
-                android:textColor="@color/colorGrey"
+                android:textColor="@color/colorWhite"
                 android:textSize="10sp"
                 android:textStyle="italic"
                 android:ellipsize="end"
-                android:lines="1"/>
+                android:lines="1"
+                android:paddingLeft="7dp"/>
 
         </TableLayout>
 
-        <ImageButton
-            android:id="@+id/albumPlayButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignEnd="@+id/albumImage"
-            android:layout_alignBottom="@+id/albumImage"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@android:color/transparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/grid_play_selector" />
+
 
     </RelativeLayout>
 
