--- a/app/src/main/res/layout/songs_cardview.xml
+++ b/app/src/main/res/layout/songs_cardview.xml
@@ -35,13 +35,16 @@
             android:id="@+id/aName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_below="@+id/sName"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
             android:layout_toEndOf="@+id/image"
             android:ellipsize="end"
             android:maxLines="1"
             android:text="albumName"
             android:textColor="@color/colorWhite"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:textStyle="italic" />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
