--- a/app/src/main/res/layout/songs_cardview.xml
+++ b/app/src/main/res/layout/songs_cardview.xml
@@ -4,47 +4,67 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="5dp"
+    app:cardCornerRadius="7dp"
     app:cardBackgroundColor="@color/card_selector"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
+        <LinearLayout
+            android:id="@+id/songsLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:padding="2dp" />
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/reputation"/>
+
+        <TableLayout
+            android:id="@+id/songsTableLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:paddingLeft="5dp">
 
         <TextView
             android:id="@+id/sName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/image"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="songName"
             android:textColor="@color/colorWhite"
             android:textSize="20sp"
-            android:ellipsize="end"
-            android:maxLines="1"/>
+            />
 
         <TextView
             android:id="@+id/aName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/sName"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            android:layout_toEndOf="@+id/image"
             android:ellipsize="end"
             android:maxLines="1"
             android:text="albumName"
             android:textColor="@color/colorWhite"
             android:textSize="15sp"
             android:textStyle="italic" />
+        </TableLayout>
+
+            <ImageButton
+                android:id="@+id/songsMenu"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/cardview_menu_icon"
+                android:background="@android:color/transparent"
+                />
+
+        </LinearLayout>
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
