--- a/app/src/main/res/layout/albums_gridview.xml
+++ b/app/src/main/res/layout/albums_gridview.xml
@@ -14,60 +14,78 @@
         android:layout_height="match_parent"
         >
 
+        <ImageView
+            android:id="@+id/albumImage"
+            android:src="@drawable/reputation"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:scaleType="fitXY"
+            />
 
         <TableLayout
             android:id="@+id/albumTableLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/albumImage"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp">
 
-            <ImageView
-                android:id="@+id/albumImage"
-                android:src="@drawable/reputation"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:scaleType="fitXY"
-                />
 
             <LinearLayout
+                android:id="@+id/albumLinearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/albumLinearLayout">
+                android:layout_height="wrap_content">
 
-                <TextView android:id="@+id/albumName"
+                <TextView
+                    android:id="@+id/albumName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:paddingLeft="7dp"
                     android:text="albumName"
                     android:textColor="@color/colorWhite"
                     android:textSize="15dp"
-                    android:textStyle="bold"
-                    android:maxLines="1"
-                    android:layout_weight="1"
-                    android:ellipsize="end"
-                    android:paddingLeft="7dp"/>
+                    android:textStyle="bold" />
 
                 <ImageButton
                     android:id="@+id/albumMenu"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@android:color/transparent"
-                    android:src="@drawable/vertical_3dots_icon" />
+                    android:src="@drawable/cardview_menu_icon" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/albumArtistName"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:ellipsize="end"
+                android:lines="1"
+                android:paddingLeft="7dp"
                 android:text="albumArtistName"
                 android:textColor="@color/colorWhite"
                 android:textSize="10sp"
-                android:textStyle="italic"
-                android:ellipsize="end"
-                android:lines="1"
-                android:paddingLeft="7dp"/>
+                android:textStyle="italic" />
 
         </TableLayout>
 
+        <ImageButton
+            android:id="@+id/albumPlayButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignBottom="@+id/albumImage"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/grid_play_selector" />
 
 
     </RelativeLayout>
