--- a/app/src/main/res/layout/playlist_gridview.xml
+++ b/app/src/main/res/layout/playlist_gridview.xml
@@ -32,39 +32,57 @@
             android:scaleType="fitCenter"
             android:src="@drawable/grid_play_selector" />
 
-        <LinearLayout
-            android:id="@+id/playlistLinearLayout"
+        <TableLayout
+            android:id="@+id/playlistTableLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/playlistImage"
-            android:layout_alignStart="@+id/playlistImage"
-            android:layout_alignEnd="@+id/playlistImage"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
-            android:background="@color/colorWhite">
+            android:layout_marginBottom="0dp">
+
+            <LinearLayout
+                android:id="@+id/playlistLinearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="0dp">
+
+                <TextView
+                    android:id="@+id/playlistName"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:paddingLeft="7dp"
+                    android:text="playlistName"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/playlistMenu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/cardview_menu_icon" />
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/playlistName"
+                android:id="@+id/playlistSongsNumber"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:layout_weight="1"
-                android:text="playlistName"
-                android:textColor="@color/colorBlack"
-                android:textSize="15sp"
-                android:textStyle="bold"
+                android:layout_height="wrap_content"
+                android:text="playlistSongsNumber"
+                android:textColor="@color/colorWhite"
+                android:textSize="10sp"
+                android:textStyle="italic"
                 android:paddingLeft="7dp"/>
-
-            <ImageButton
-                android:id="@+id/playlistMenu"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:src="@drawable/vertical_3dots_icon" />
-
-        </LinearLayout>
+        </TableLayout>
 
     </RelativeLayout>
 
