added songs albumart

--- a/app/src/main/res/layout/songs_cardview.xml
+++ b/app/src/main/res/layout/songs_cardview.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/albumArt"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:scaleType="fitCenter"
